Complete TicketManager and Anti-NSFW images

--- a/website/html/settings_discord.html
+++ b/website/html/settings_discord.html
@@ -38,6 +38,7 @@
 
   <section class="filter">
     <h1>Filter</h1>
+
     <Setting:invites Censor Invites>
       <Switch>
     </Setting>
@@ -88,6 +89,7 @@
 
   <section class="other">
     <h1>Other</h1>
+
     <Setting:antiHoist Anti-Hoist>
       <Tooltip>
         Automatically detects when a user has a hoisting character in their name and adds a dehoisting character in front.
@@ -125,6 +127,7 @@
 
   <section class="punishments">
     <h1>Punishments</h1>
+
     <ul>
       <li id="punishment.amount">
         <p>If a user curses </p> <Number min="1" max="50">
@@ -152,7 +155,7 @@
         <p>Role:</p> <select></select>
       </li>
       <li id="punishment.retainRoles" hidden>
-        <p>Retain Roles: <Star>
+        <p>Remove Roles: <Star>
           <Tooltip>
             Removes all roles when muting somebody, and gives them back after they've been unmuted.
           </Tooltip>
