Prepare for rewrite

--- a/website/html/settings_discord.html
+++ b/website/html/settings_discord.html
@@ -80,9 +80,7 @@
       <Switch>
     </PremiumSetting>
     <PremiumSetting:images Anti-NSFW Images>
-      <Tooltip href="https://twitter.com/Link90355556" target="_blank">
-        Made possible by Link#0069
-      </Tooltip>
+      <Tooltip href="https://twitter.com/Link90355556" target="_blank"> Made possible by Link#0069 </Tooltip>      
       <Switch>
     </PremiumSetting>
   </section>
