Separate DM commands and DM popups

--- a/website/html/settings_discord.html
+++ b/website/html/settings_discord.html
@@ -25,7 +25,7 @@
         <option value>None</option>
       </select>
     </Setting>
-    <PremiumSetting:dm DM>
+    <PremiumSetting:dm DM Commands>
       <Switch>
     </PremiumSetting>
     <Setting:role Ignored Roles>
@@ -102,6 +102,9 @@
       </li>
       <li id="msg.deleteAfter">
         Deletes after <Number placeholder="Never" min="0" max="120"> seconds
+      </li>
+      <li id="msg.dm">
+        DM Popups <Star><Switch>
       </li>
     </ul>
     <h2>Resend <Star> <Tooltip>
