--- a/website/html/index.html
+++ b/website/html/index.html
@@ -10,7 +10,7 @@
   <style id="css2"></style>
 
   <meta property="og:image" content="https://branding.jt3ch.net/censorbot.svg">
-  <meta name="theme-color" content="#ff3d00">
+  <meta name="theme-color" content="#ea5455">
   <meta property="og:title" content="Censor Bot">
   <meta property="og:description" content="Easy to use advanced content filtering for your Discord server(s)!">
   <meta name="description"
