Fix surround issues and implement ocr

--- a/website/html/settings_discord.html
+++ b/website/html/settings_discord.html
@@ -82,6 +82,9 @@
     <PremiumSetting:images Anti-NSFW Images>  
       <Switch>
     </PremiumSetting>
+    <PremiumSetting:ocr OCR>  
+      <Switch>
+    </PremiumSetting>
   </section>
 
   <section class="other">
