Add ocr to premium page

--- a/website/html/premium.html
+++ b/website/html/premium.html
@@ -61,8 +61,8 @@
       <p>Using advanced AI, we scan every message for anything remotely toxic, this can be very strict but great for only-positive communities.</p>
     </div>
     <div>
-      <h3>DM</h3>
-      <p>Replaces all situations where a user would be responded to, such as commands, and pop messages, with a DM rather than sending in a public channel.</p>
+      <h3>OCR (Optical Character Recognition)</h3>
+      <p>Using advanced AI, the bot will scan every image sent for text, and then match that up against the filter (including server filter)! Removing another way users can bypass the filter.</p>
     </div>
     <div>
       <h3>Increased Maximums</h3>
@@ -82,6 +82,7 @@
       <p>
         <ul>
           <li>DM Command Responses: Makes responses to commands respond in the invokers DM's rather than in the same channel.</li>
+          <li>DM Popup Messages: sends the popup message to a users DMs rather than in the chat.</li>
           <li>Long lasting HelpME codes, allowing staff to diagnose your problem over the span of months.</li>
         </ul>
       </p>
